--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,14 @@
         <servlet-name>dispatcherServlet</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
+    <!-- <servlet>
+    	<servlet-name>VertifyCodeUtil</servlet-name>
+    	<servlet-class>ssm.blog.util.VertifyCodeUtil</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    	<servlet-name>VertifyCodeUtil</servlet-name>
+    	<url-pattern>VertifyCodeUtil</url-pattern>
+    </servlet-mapping> -->
     <!-- 添加shiro过滤器 -->
     <filter>
         <filter-name>shiroFilter</filter-name>
